fixed overflow and line width

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,6 +3,7 @@
 
 .header {
   font-size: 1.2rem;
+  overflow: hidden;
 }
 
 .header-fixed {
