--- a/src/components/LineDecor/LineDecor.scss
+++ b/src/components/LineDecor/LineDecor.scss
@@ -5,7 +5,7 @@
   position: absolute;
   // display: flex;
   height: 50px;
-  width: 80vw;
+  width: 75%;
   top: 150px;
   left: 370px;
 
@@ -15,11 +15,14 @@
     width: 100%;
     transform: skew(140deg);
     background: linear-gradient(90.05deg, $red 38.38%, rgba(222, 10, 20, 0.265625) 87.59%, rgba(222, 10, 20, 0) 101.26%);
-    @media only screen and (max-width: 1500px) {
-      width: 80%;
-    }
+    // @media only screen and (max-width: 1500px) {
+    //   width: 80%;
+    // }
   }
 
+  @media only screen and (max-width: 1550px) {
+    width: 65%;
+  }
   @media only screen and (max-width: 1150px) {
     display: none;
   }
